# voice-to-code

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py  routes.py
frontend/: index.html
src/: config.py  converter.py  executor.py  history.py  interactive.py  main.py  recorder.py  transcriber.py
tests/: test_converter.py  test_executor.py  test_transcriber.py
