[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-to-code"
version = "1.0.0"
description = "Voice-to-Code Assistant leveraging Whisper and GPT-4o"
authors = [
    { name = "antigravity" }
]
dependencies = [
    "openai>=1.14.0",
    "sounddevice>=0.4.6",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0"
]

[project.scripts]
vtc = "src.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0"
]
